# gmail_mcp

./: .gitignore  MCP_SERVER_GUIDE.md  README.md  auth.py  gmail_mcp.py  main.py  pyproject.toml
tests/: test_gmail_mcp.py
