[project]
name = "gmail-mcp"
version = "0.1.0"
description = "Gmail MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3,<4",
    "google-api>=0.1.12",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
]

[project.scripts]
gmail-mcp = "gmail_mcp:mcp.run"

[tool.setuptools]
py-modules = ["gmail_mcp"]
